--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "display": "fullscreen",
     "orientation": "portrait",
     "scope": "/",
-    "start_url": "/ZTI",
+    "start_url": "/ZTI/",
     "icons": [
         {
             "src": "pwalogo.png",
