--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "start_url": "/ZTI/",
     "icons": [
         {
-            "src": "pwalogo.png",
+            "src": "4043233.png",
             "sizes": "512x512",
             "type": "image/png"
         }
